--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>The Best Movies according to Mira</h1>
+<h2>My top 3 Movies of all time</h2>
+<hr/>
+<h3>Hachiko</h3>
+<p>This was the first movie about a dog's story and since then, I can't foget about the story of Hachi</p>
+<h3>Matilda</h3>
+<p>Idk, can't explain.</p>
+<h3>White Chicks</h3>
+<p>idk either. I'll just never get tired of watching these 3 movies</p>
