--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +639664891068</p>
+<p>Email: aimohamad@outlook.ph</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Phase 1, Palmera Northwinds City<br />
+  Brgy. Kaypian<br />
+ San Jose Del Monte Bulacan <br />
 </p>
